--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,27 +14,27 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-13 Thu 23:50]
+#+CAPTION: Clock summary at [2016-10-14 Fri 11:06]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *34:22* |       |       | 100.0 |
+| *Total time*                                                                | *36:12* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 34:22   |       |       | 100.0 |
-| Active                                                                      |         | 34:22 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:22 |   1.1 |
+| Stories                                                                     | 36:12   |       |       | 100.0 |
+| Active                                                                      |         | 36:12 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  0:22 |   1.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   0.9 |
-| COMPLETED Improve bintray support                                           |         |       |  0:26 |   1.3 |
-| COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   3.7 |
+| COMPLETED Improve bintray support                                           |         |       |  0:26 |   1.2 |
+| COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   3.5 |
 | COMPLETED Remove any remnants of annotations from quilt                     |         |       |  0:05 |   0.2 |
-| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |  11.7 |
-| COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   0.9 |
-| COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   3.4 |
-| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  44.2 |
-| COMPLETED Minor tidy-up of the quilt.cpp diagram                            |         |       |  0:29 |   1.4 |
-| COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   5.0 |
+| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |  11.1 |
+| COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   0.8 |
+| COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   3.3 |
+| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  42.0 |
+| COMPLETED Minor tidy-up of the quilt.cpp diagram                            |         |       |  0:29 |   1.3 |
+| COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   4.7 |
 | COMPLETED Use vector of elements in model                                   |         |       |  0:10 |   0.5 |
-| STARTED Rewrite profile support                                             |         |       |  8:49 |  25.7 |
+| STARTED Rewrite profile support                                             |         |       | 10:39 |  29.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -281,6 +281,7 @@ use a vector instead of a list.
 After the change, performance did not move very much.
 
 *** STARTED Rewrite profile support                                   :story:
+    CLOCK: [2016-10-14 Fri 09:16]--[2016-10-14 Fri 11:06] =>  1:50
     CLOCK: [2016-10-13 Thu 23:25]--[2016-10-13 Thu 23:50] =>  0:25
     CLOCK: [2016-10-13 Thu 22:45]--[2016-10-13 Thu 23:24] =>  0:39
     CLOCK: [2016-10-13 Thu 21:24]--[2016-10-13 Thu 22:44] =>  1:20
@@ -325,9 +326,17 @@ Notes:
 - we are not enabling cmake in types+io etc profiles. We
   probably should. The names are becoming a bit large though.
 
-*** Registrar in quilt is not being generated                         :story:
+*** Merge annotation type and profile folders                         :story:
 
-We don't seem to change the contents of this file when regenerating.
+At present we split "annotations" that is types from profiles. In
+reality this is all annotation data.
+
+Tasks:
+
+- rename all files in annotations to annotations.types.*
+- rename all files in profiles to annotations.profiles.*
+- merge all files under annotations
+- change hydrators to look for files with the correct prefixes.
 
 *** Push stereotypes processing into yarn                             :story:
 
@@ -434,6 +443,15 @@ Note: we don't need to do leaf management:
 We just need to enable/disable serialisation and the code will work.
 
 - add a stereotype of handcrafted with a default profile.
+
+*** Finish overwriting support                                        :story:
+
+With profiles we have all the pieces in place to support overwrites,
+but there is some linkage missing:
+
+- global/local configuration needs to have an overwrite flag;
+- need to populate formatter configuration on the back of that;
+- need to read flag from formatter configuration and set it on file.
 
 *** Generate formatter interfaces                                      :epic:
 
@@ -581,15 +599,6 @@ We deliberately skipped stitch on the clean up exercise for
 configuration/annotations, so we could look at it when doing wale
 templates.
 
-*** Finish overwriting support                                        :story:
-
-With profiles we have all the pieces in place to support overwrites,
-but there is some linkage missing:
-
-- global/local configuration needs to have an overwrite flag;
-- need to populate formatter configuration on the back of that;
-- need to read flag from formatter configuration and set it on file.
-
 *** Remove object types in yarn                                       :story:
 
 We need to figure out if this enumeration is still in use and if not
@@ -608,6 +617,10 @@ In inclusion expander, we have hacked the sorting:
 :            return true;
 
 This could be handled via meta-data, supplying some kind of flag (sort last?).
+
+*** Registrar in quilt is not being generated                         :story:
+
+We don't seem to change the contents of this file when regenerating.
 
 *** Investigate helper generation in formattables                     :story:
 
