--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,27 +14,27 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-14 Fri 12:16]
+#+CAPTION: Clock summary at [2016-10-14 Fri 12:19]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *37:21* |       |       | 100.0 |
+| *Total time*                                                                | *37:23* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 37:21   |       |       | 100.0 |
-| Active                                                                      |         | 37:21 |       | 100.0 |
+| Stories                                                                     | 37:23   |       |       | 100.0 |
+| Active                                                                      |         | 37:23 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:22 |   1.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   0.8 |
 | COMPLETED Improve bintray support                                           |         |       |  0:26 |   1.2 |
 | COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   3.4 |
 | COMPLETED Remove any remnants of annotations from quilt                     |         |       |  0:05 |   0.2 |
-| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |  10.8 |
+| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |  10.7 |
 | COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   0.8 |
 | COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   3.2 |
 | COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  40.7 |
 | COMPLETED Minor tidy-up of the quilt.cpp diagram                            |         |       |  0:29 |   1.3 |
 | COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   4.6 |
 | COMPLETED Use vector of elements in model                                   |         |       |  0:10 |   0.4 |
-| STARTED Rewrite profile support                                             |         |       | 11:48 |  31.6 |
+| STARTED Rewrite profile support                                             |         |       | 11:50 |  31.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -280,7 +280,9 @@ use a vector instead of a list.
 
 After the change, performance did not move very much.
 
-*** STARTED Rewrite profile support                                   :story:
+*** COMPLETED Rewrite profile support                                 :story:
+    CLOSED: [2016-10-14 Fri 12:19]
+    CLOCK: [2016-10-14 Fri 12:17]--[2016-10-14 Fri 12:19] =>  0:02
     CLOCK: [2016-10-14 Fri 11:53]--[2016-10-14 Fri 12:16] =>  0:23
     CLOCK: [2016-10-14 Fri 11:07]--[2016-10-14 Fri 11:53] =>  0:46
     CLOCK: [2016-10-14 Fri 09:16]--[2016-10-14 Fri 11:06] =>  1:50
