--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,28 +14,28 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-14 Fri 12:31]
+#+CAPTION: Clock summary at [2016-10-14 Fri 12:40]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *37:34* |       |       | 100.0 |
+| *Total time*                                                                | *37:42* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 37:34   |       |       | 100.0 |
-| Active                                                                      |         | 37:34 |       | 100.0 |
+| Stories                                                                     | 37:42   |       |       | 100.0 |
+| Active                                                                      |         | 37:42 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:22 |   1.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   0.8 |
-| COMPLETED Improve bintray support                                           |         |       |  0:26 |   1.2 |
+| COMPLETED Improve bintray support                                           |         |       |  0:26 |   1.1 |
 | COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   3.4 |
 | COMPLETED Remove any remnants of annotations from quilt                     |         |       |  0:05 |   0.2 |
 | COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |  10.7 |
 | COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   0.8 |
 | COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   3.1 |
-| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  40.5 |
+| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  40.3 |
 | COMPLETED Minor tidy-up of the quilt.cpp diagram                            |         |       |  0:29 |   1.3 |
 | COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   4.6 |
 | COMPLETED Use vector of elements in model                                   |         |       |  0:10 |   0.4 |
-| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  31.5 |
-| STARTED Merge annotation type and profile folders                           |         |       |  0:11 |   0.5 |
+| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  31.4 |
+| STARTED Merge annotation type and profile folders                           |         |       |  0:19 |   0.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -332,6 +332,7 @@ Notes:
   probably should. The names are becoming a bit large though.
 
 *** STARTED Merge annotation type and profile folders                 :story:
+    CLOCK: [2016-10-14 Fri 12:32]--[2016-10-14 Fri 12:40] =>  0:08
     CLOCK: [2016-10-14 Fri 12:20]--[2016-10-14 Fri 12:31] =>  0:11
 
 At present we split "annotations" that is types from profiles. In
@@ -340,7 +341,7 @@ reality this is all annotation data.
 Tasks:
 
 - rename all files in annotations to annotations.types.*
-- rename all files in profiles to annotations.profiles.*
+  - rename all files in profiles to annotations.profiles.*
 - merge all files under annotations
 - change hydrators to look for files with the correct prefixes.
 
