--- a/doc/agile/sprint_backlog_90.org
+++ b/doc/agile/sprint_backlog_90.org
@@ -14,28 +14,31 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-14 Fri 12:41]
+#+CAPTION: Clock summary at [2016-10-14 Fri 14:41]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *37:43* |       |       | 100.0 |
+| *Total time*                                                                | *38:43* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 37:43   |       |       | 100.0 |
-| Active                                                                      |         | 37:43 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:22 |   1.0 |
+| Stories                                                                     | 38:43   |       |       | 100.0 |
+| Active                                                                      |         | 38:43 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  0:22 |   0.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:19 |   0.8 |
 | COMPLETED Improve bintray support                                           |         |       |  0:26 |   1.1 |
-| COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   3.4 |
+| COMPLETED Refactor opaque infrastructure                                    |         |       |  1:17 |   3.3 |
 | COMPLETED Remove any remnants of annotations from quilt                     |         |       |  0:05 |   0.2 |
-| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |  10.6 |
+| COMPLETED Solve the issue of too many "configurations"                      |         |       |  4:01 |  10.4 |
 | COMPLETED Merge decoration configuration and annotations factories          |         |       |  0:18 |   0.8 |
 | COMPLETED Move annotation factories into expander in yarn                   |         |       |  1:11 |   3.1 |
-| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  40.3 |
-| COMPLETED Minor tidy-up of the quilt.cpp diagram                            |         |       |  0:29 |   1.3 |
-| COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   4.6 |
+| COMPLETED Clean up terminology in dynamic                                   |         |       | 15:12 |  39.3 |
+| COMPLETED Minor tidy-up of the quilt.cpp diagram                            |         |       |  0:29 |   1.2 |
+| COMPLETED Create a ownership hierarchy repository                           |         |       |  1:43 |   4.4 |
 | COMPLETED Use vector of elements in model                                   |         |       |  0:10 |   0.4 |
-| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  31.4 |
+| COMPLETED Rewrite profile support                                           |         |       | 11:50 |  30.6 |
 | COMPLETED Merge annotation type and profile folders                         |         |       |  0:20 |   0.9 |
+| STARTED Push stereotypes processing into yarn                               |         |       |  0:40 |   1.7 |
+| STARTED Implement defaulting within the profiler                            |         |       |  0:14 |   0.6 |
+| STARTED Finish overwriting support                                          |         |       |  0:06 |   0.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -347,7 +350,9 @@ Tasks:
 - merge all files under annotations
 - change hydrators to look for files with the correct prefixes.
 
-*** Push stereotypes processing into yarn                             :story:
+*** STARTED Push stereotypes processing into yarn                     :story:
+    CLOCK: [2016-10-14 Fri 14:10]--[2016-10-14 Fri 14:41] =>  0:31
+    CLOCK: [2016-10-14 Fri 13:40]--[2016-10-14 Fri 13:49] =>  0:09
 
 At present we have stereotypes as an enum, and the frontends are
 responsible for resolving the stereotypes. This is not ideal:
@@ -453,7 +458,24 @@ We just need to enable/disable serialisation and the code will work.
 
 - add a stereotype of handcrafted with a default profile.
 
-*** Finish overwriting support                                        :story:
+*** STARTED Implement defaulting within the profiler                  :story:
+    CLOCK: [2016-10-14 Fri 13:56]--[2016-10-14 Fri 14:10] =>  0:14
+
+We tried to do defaulting via the type's default value, but this is
+not ideal as it defaults for all scopes. Ideally we need a root level
+default, and no entity level defaults.
+
+Tasks:
+
+- remove scope types from profile
+- remove default value from profile type
+- create the notion of "scoped labels",
+  e.g. "default.root_module". If no profile is supplied, look for the
+  scope default. If none is found do nothing.
+- allow users to supply labels. These are checked after profile field.
+
+*** STARTED Finish overwriting support                                :story:
+    CLOCK: [2016-10-14 Fri 13:49]--[2016-10-14 Fri 13:55] =>  0:06
 
 With profiles we have all the pieces in place to support overwrites,
 but there is some linkage missing:
